# ai-knowledge-crawler

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.ai/: PROJECT.md  automation.yaml
.ai/knowledge/: skill-security-spec.md  source-profiles.md  source-trust-policy.md  topic-taxonomy.md
.ai/prompts/: summarize.st
.qoder/knowledge/: skill-security-spec.md  source-profiles.md  source-trust-policy.md  topic-taxonomy.md
config/: logging.yaml  settings.yaml  sources.yaml  user.example.yaml
desktop_app/: README.md
desktop_app/docs/: PACKAGING.md  RELEASE.md
desktop_app/frontend/: README.md
desktop_app/python_sidecar/: README.md  desktop_server.py  pyinstaller.spec
desktop_app/resources/: FIRST_RUN.md
desktop_app/tauri/: README.md  package.json
desktop_app/tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop_app/tauri/src-tauri/src/: lib.rs  main.rs
docs/: AI_CHANGE_GUIDE.md  DOCUMENTATION_STYLE.md  MODULES.md  OPERATIONS.md
knowledge_base/: README.md
scripts/: export_automation.py  generate_report.py  local_test.py  run_crawler.py  run_daily.py  schedule_windows.ps1  serve_api.py
src/ai/: llm_client.py  mock_client.py  openai_client.py  summarizer.py
src/core/: exceptions.py  models.py  registry.py
src/crawlers/: base.py  (+2 more)
tests/: conftest.py  test_ai_and_documents.py  test_automation_export.py  test_cli_and_local_pipeline.py  test_config_and_proxy.py  test_desktop_app.py  test_models_storage_registry.py  test_parsers.py  test_ranking.py  test_report_data.py  test_report_frontend_source.py  test_web_api.py
(+81 files in other folders)
