[package]
name = "ai-knowledge-crawler-desktop"
version = "0.1.0"
description = "Desktop shell for AI Knowledge Crawler"
authors = ["AI Knowledge Crawler"]
edition = "2021"

[lib]
name = "ai_knowledge_crawler_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
